# juzzy-google-plugin

./: .difyignore  .gitignore  CLAUDE.md  PRIVACY.md  README.md  manifest.yaml  pyproject.toml  requirements.txt
provider/: google.py  google.yaml
tools/: google_image_search.py  google_image_search.yaml  google_search.py  google_search.yaml  utils.py  web_crawl.py  web_crawl.yaml
