[project]
name = "google-search-plugin"
version = "0.1.0"
description = "Dify plugin for Google Custom Search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dify-plugin>=0.5.1",
    "pydantic>=2.12.3",
    "loguru>=0.7.0",
    "setuptools==80.9.0",
    "sniffio==1.3.1",
    "google-api-python-client>=2.100.0",
    "trafilatura>=2.0.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.14.2",
]
