[project]
name = "juzzy-google-plugin"
version = "0.2.2"
description = "Dify plugin for Google Search, Image Search, and Web Crawl"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dify-plugin>=0.5.1",
    "google-api-python-client>=2.100.0",
    "pypdf>=6.7.4",
    "trafilatura>=2.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.2",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_subclassing_any = false
exclude = [".venv"]
explicit_package_bases = true
mypy_path = "."

[[tool.mypy.overrides]]
module = ["dify_plugin.*", "google.*", "googleapiclient.*", "trafilatura.*"]
ignore_missing_imports = true
